# neural-network

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
docs/: api_reference.md  examples.md  index.md  quickstart.md
examples/: __init__.py  and_gate_example.py  regression_example.py  xor_example.py
neural_network/: __init__.py
neural_network/activations/: __init__.py  functions.py
neural_network/core/: __init__.py  initializers.py  network.py
neural_network/losses/: __init__.py  functions.py
neural_network/optimizers/: __init__.py  sgd.py
neural_network/utils/: __init__.py  helpers.py
tests/: __init__.py  test_activations.py  test_network.py
